upgrade to java 19 + virtual threads :bangbang: